--- a/prompt-eng/meta.ipynb
+++ b/prompt-eng/meta.ipynb
@@ -39,20 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To calculate this, we need to know that the logarithm of 2 (base 10) is approximately 0.301.\n",
+      "{'model': 'llama3.2:latest', 'prompt': 'Rewrite this question as a prompt to a large language model:\\nWhat is 984 * log(2)\\nDo not provide any kind of comments or headers to your response.', 'stream': False, 'options': {'temperature': 1.0, 'num_ctx': 100, 'num_predict': 100}}\n",
+      "{'model': 'llama3.2:latest', 'prompt': 'calculate the result of the expression 984 times the logarithm base 2 of 2', 'stream': False, 'options': {'temperature': 1.0, 'num_ctx': 100, 'num_predict': 200}}\n",
+      "To calculate the result of the expression 984 × log2(2), we need to follow the order of operations (PEMDAS):\n",
       "\n",
-      "So,\n",
+      "1. Evaluate the logarithm: log2(2) = 1, since any number raised to the power of 0 is equal to 1.\n",
+      "2. Multiply the result by 2: 1 × 2 = 2.\n",
       "\n",
-      "984 * log(2) ≈ 984 * 0.301\n",
-      "≈ 295.584\n",
-      "Time taken: 5.399s\n"
+      "Therefore, the final answer is 2.\n",
+      "Time taken: 3.862s\n"
      ]
     }
    ],
@@ -68,8 +70,19 @@
     "\n",
     "#### (2) Adjust the Prompt Engineering Technique to be applied, simulating Workflow Templates\n",
     "\n",
-    "# @TODO TO BE COMPLETED\n",
-    "PROMPT = MESSAGE \n",
+    "# Query model to adjust prompt.\n",
+    "TEMPLATE_BEFORE = \"Rewrite this question as a prompt to a large language model:\\n\"\n",
+    "TEMPLATE_AFTER = \"\\nDo not provide any kind of comments or headers to your response.\"\n",
+    "PROMPT = TEMPLATE_BEFORE + MESSAGE + TEMPLATE_AFTER \n",
+    "\n",
+    "prompt_payload = create_payload(target=\"ollama\",\n",
+    "                         model=\"llama3.2:latest\", \n",
+    "                         prompt=PROMPT, \n",
+    "                         temperature=1.0, \n",
+    "                         num_ctx=100, \n",
+    "                         num_predict=100)\n",
+    "\n",
+    "_, PROMPT = model_req(prompt_payload)\n",
     "\n",
     "#### (3) Configure the Model request, simulating Workflow Orchestration\n",
     "# Documentation: https://github.com/ollama/ollama/blob/main/docs/api.md\n",
@@ -78,7 +91,7 @@
     "                         prompt=PROMPT, \n",
     "                         temperature=1.0, \n",
     "                         num_ctx=100, \n",
-    "                         num_predict=100)\n",
+    "                         num_predict=200)\n",
     "\n",
     "### YOU DONT NEED TO CONFIGURE ANYTHING ELSE FROM THIS POINT\n",
     "# Send out to the model\n",
@@ -90,7 +103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "prompt-eng-venv",
    "language": "python",
    "name": "python3"
   },
@@ -104,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
