--- a/prompt-eng/chain_of_thought.ipynb
+++ b/prompt-eng/chain_of_thought.ipynb
@@ -45,15 +45,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "Time taken: 4.302s\n"
+      "{'model': 'llama3.2:latest', 'prompt': '\\nThe odd numbers in this group add up to an even number: 4, 8, 9, 15, 12, 2, 1.\\nA: Adding all the odd numbers (9, 15, 1) gives 25. The answer is False.\\nThe odd numbers in this group add up to an even number: 17,  10, 19, 4, 8, 12, 24.\\nA: Adding all the odd numbers (17, 19) gives 36. The answer is True.\\nThe odd numbers in this group add up to an even number: 16,  11, 14, 4, 8, 13, 24.\\nA: Adding all the odd numbers (11, 13) gives 24. The answer is True.\\nThe odd numbers in this group add up to an even number: 17,  9, 10, 12, 13, 4, 2.\\nA: Adding all the odd numbers (17, 9, 13) gives 39. The answer is False.\\nAdd all positive odd numbers until the sum is greater than 200. Show your work.\\n', 'stream': False, 'options': {'temperature': 1.0, 'num_ctx': 256, 'num_predict': 500}}\n",
+      "Let's add positive odd numbers until the sum is greater than 200:\n",
+      "\n",
+      "1 + 3 = 4\n",
+      "4 + 5 = 9\n",
+      "9 + 7 = 16\n",
+      "16 + 9 = 25\n",
+      "25 + 11 = 36\n",
+      "36 + 13 = 49\n",
+      "49 + 15 = 64\n",
+      "64 + 17 = 81\n",
+      "81 + 19 = 100\n",
+      "100 + 21 = 121\n",
+      "121 + 23 = 144\n",
+      "144 + 25 = 169\n",
+      "169 + 27 = 196\n",
+      "196 + 29 = 225\n",
+      "\n",
+      "The sum of positive odd numbers up to 200 is 225, which is greater than 200.\n",
+      "Time taken: 8.313s\n"
      ]
     }
    ],
@@ -79,8 +97,7 @@
     "A: Adding all the odd numbers (11, 13) gives 24. The answer is True.\n",
     "The odd numbers in this group add up to an even number: 17,  9, 10, 12, 13, 4, 2.\n",
     "A: Adding all the odd numbers (17, 9, 13) gives 39. The answer is False.\n",
-    "Now Add all odd numbers until {MESSAGE} and let me know. \n",
-    "Provide only the answer, no explanation!\n",
+    "Add all positive odd numbers until the sum is greater than {MESSAGE}. Show your work.\n",
     "\"\"\"\n",
     "\n",
     "PROMPT = CHAIN_OF_THOUGHT \n",
@@ -91,8 +108,8 @@
     "                         model=\"llama3.2:latest\", \n",
     "                         prompt=PROMPT, \n",
     "                         temperature=1.0, \n",
-    "                         num_ctx=100, \n",
-    "                         num_predict=100)\n",
+    "                         num_ctx=256, \n",
+    "                         num_predict=256)\n",
     "\n",
     "### YOU DONT NEED TO CONFIGURE ANYTHING ELSE FROM THIS POINT\n",
     "# Send out to the model\n",
@@ -104,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "prompt-eng-venv",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
