Change hybrid to modified prompt template

--- a/prompt-eng/modified_prompt_template.ipynb
+++ b/prompt-eng/modified_prompt_template.ipynb
@@ -12,14 +12,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hybrid Prompting\n",
+    "# Modified Prompt Template\n",
     "\n",
-    "A combination of several different kinds of prompting.  This is our own contribution, but it is a fairly obvious follow-up to the other prompt engineering techniques."
+    "A prompt template modified for our own purposes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
    ],
    "source": [
     "##\n",
-    "## HYBRID PROMPTING\n",
+    "## MODIFIED PROMPT TEMPLATE\n",
     "##\n",
     "\n",
     "from _pipeline import create_payload, model_req\n",
